test-data/elab/unification/infinite-solution.snapshot
exit status: 0

stdout = """
it : forall(Wrap : forall(_ : Type) -> Type) -> (forall(A : Type, _ : A -> Wrap(A)) -> Type) -> Type

"""

stderr = """
error: infinite solution
  ┌─ test-data/elab/unification/infinite-solution.pion:3:38
  │
3 │     = fun(Wrap, f) => f(_, fun(a) => a);
  │                                      ^

error: Could not infer expression to solve hole
  ┌─ test-data/elab/unification/infinite-solution.pion:3:25
  │
3 │     = fun(Wrap, f) => f(_, fun(a) => a);
  │                         ^


"""
